@@ -7,6 +7,7 @@ Modified setup.py to support Cyrus-SASL 2.x.
 
 ldap.ldapobject:
 * apply() is not used anymore since it seems deprecated
+* Fixed __setstate__() and __getstate__() of ReconnectLDAPObject
 
 ldap.schema:
 * Completed classes for nameForms, dITStructureRules and
